    bit cleaner and faster than plain localtime.  Compile with
    -DHAVE_LOCALTIME_R=0 and/or -DHAVE_TZSET=0 if your system lacks them.

    The tz code now attempts to infer TM_GMTOFF and TM_ZONE if not
    already defined, to make it easier to configure on common platforms.
    Define NO_TM_GMTOFF and NO_TM_ZONE to suppress this.

    tzselect -c now uses a hybrid distance measure that works better
    in Africa.  (Thanks to Alan Barrett for noting the problem.)

    The C source code now ports to NetBSD when GCC_DEBUG_FLAGS is used,
    or when time_tz is defined.

    When HAVE_UTMPX_H is set the 'date' command now builds on systems
    whose <utmpx.h> file does not define WTMPX_FILE, and when setting
    the date it updates the wtmpx file if _PATH_WTMPX is defined.
    This affects GNU/Linux and similar systems.

    For easier maintenance later, some C code has been simplified
    and some lint has been removed.

    The long-obsolete 'gtime' function has been removed.

  Changes affecting build procedure

    'zdump' no longer links in ialloc.o, as it's not needed.

  Changes affecting distribution tarballs

    The files checktab.awk and zoneinfo2tdf.pl are now distributed in
    the tzdata tarball instead of the tzcode tarball, since they help
    maintain the data.  The NEWS and Theory files are now also
    distributed in the tzdata tarball, as they're relevant for data.
    (Thanks to Alan Barrett for pointing this out.)  Also, the
    leapseconds.awk file is no longer distributed in the tzcode
    tarball, since it belongs in the tzdata tarball (where 2014f
    inadvertently also distributed it).

  Changes affecting documentation and commentary

    A new file CONTRIBUTING is distributed.  (Thanks to Tim Parenti for
    suggesting a CONTRIBUTING file, and to Walter Harms for debugging it.)

    The man pages have been updated to use function prototypes, and
    to document thread-safe variants like localtime_r.
